--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <input type="button"
               value="Red Green Blue" 
               id="Makegray"
-            onclick="redyellowblue()">
+            onclick="redgreenblue()">
  
      
    </div>
