--- a/gdp/v2/index.html
+++ b/gdp/v2/index.html
@@ -22,7 +22,7 @@
 		<!-- /triggers -->
 		<div class="pt-triggers">
 			<button id="iterateEffects" class="pt-touch-button cssbutton">Next problem</button>
-			<div id="dl-menu" class="dl-menuwrapper">
+			<!--<div id="dl-menu" class="dl-menuwrapper">
 				<button class="dl-trigger cssbutton">Choose a problem</button>
 				<ul class="dl-menu">
 					<li>
@@ -154,7 +154,7 @@
 					</li>
 					<li data-animation="67"><a href="#">Slide</a></li>
 				</ul>
-			</div><!-- /dl-menu-wrapper-->
+			</div> /dl-menu-wrapper-->
 		</div>
 
 
@@ -216,13 +216,90 @@
 			
 			</div>
 			<div class="pt-page pt-page-3"><h1><span>University of California, Irvine</span><strong>The Geometry 
-			</strong> Discovery Project</h1></div>
+			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line2</h1>
+
+			<div class="app problem">
+				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
+					<circle id="ptoCircle_simsonline" r="200" cx="250" cy="250" fill="white" stroke="black"/>
+					<polygon id="tri_simsonline" fill="white" stroke="black"/>
+	   <text id="letterA_simsonline">A</text>
+		<text id="letterB_simsonline">B</text>
+		<text id="letterC_simsonline">C</text>
+		 <line id="line0_simsonline"  stroke="turquoise" />
+		<line id="line1_simsonline"  stroke="blue" />
+		<line id="line2_simsonline"  stroke="#6495ED" />
+		<line id="line3_simsonline"  stroke="red" />
+		<line id="line4_simsonline"  stroke="red" />
+				</svg>
+			</div></div>
 			<div class="pt-page pt-page-4"><h1><h1><span>University of California, Irvine</span><strong>The Geometry 
-			</strong> Discovery Project</h1></div>
+			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line3</h1>
+
+			<div class="app problem">
+				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
+					<circle id="ptoCircle_simsonline" r="200" cx="250" cy="250" fill="white" stroke="black"/>
+					<polygon id="tri_simsonline" fill="white" stroke="black"/>
+	   <text id="letterA_simsonline">A</text>
+		<text id="letterB_simsonline">B</text>
+		<text id="letterC_simsonline">C</text>
+		 <line id="line0_simsonline"  stroke="turquoise" />
+		<line id="line1_simsonline"  stroke="blue" />
+		<line id="line2_simsonline"  stroke="#6495ED" />
+		<line id="line3_simsonline"  stroke="red" />
+		<line id="line4_simsonline"  stroke="red" />
+				</svg>
+			</div></div>
 			<div class="pt-page pt-page-5"><h1><span>University of California, Irvine</span><strong>The Geometry 
-			</strong> Discovery Project</h1></div>
+			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line4</h1>
+
+			<div class="app problem">
+				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
+					<circle id="ptoCircle_simsonline" r="200" cx="250" cy="250" fill="white" stroke="black"/>
+					<polygon id="tri_simsonline" fill="white" stroke="black"/>
+	   <text id="letterA_simsonline">A</text>
+		<text id="letterB_simsonline">B</text>
+		<text id="letterC_simsonline">C</text>
+		 <line id="line0_simsonline"  stroke="turquoise" />
+		<line id="line1_simsonline"  stroke="blue" />
+		<line id="line2_simsonline"  stroke="#6495ED" />
+		<line id="line3_simsonline"  stroke="red" />
+		<line id="line4_simsonline"  stroke="red" />
+				</svg>
+			</div></div>
 			<div class="pt-page pt-page-6"><h1><span>University of California, Irvine</span><strong>The Geometry 
-			</strong> Discovery Project</h1></div>
+			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line5</h1>
+
+			<div class="app problem">
+				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
+					<circle id="ptoCircle_simsonline" r="200" cx="250" cy="250" fill="white" stroke="black"/>
+					<polygon id="tri_simsonline" fill="white" stroke="black"/>
+	   <text id="letterA_simsonline">A</text>
+		<text id="letterB_simsonline">B</text>
+		<text id="letterC_simsonline">C</text>
+		 <line id="line0_simsonline"  stroke="turquoise" />
+		<line id="line1_simsonline"  stroke="blue" />
+		<line id="line2_simsonline"  stroke="#6495ED" />
+		<line id="line3_simsonline"  stroke="red" />
+		<line id="line4_simsonline"  stroke="red" />
+				</svg>
+			</div></div>
+			<div class="pt-page pt-page-6"><h1><span>University of California, Irvine</span><strong>The Geometry 
+			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line6</h1>
+
+			<div class="app problem">
+				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
+					<circle id="ptoCircle_simsonline" r="200" cx="250" cy="250" fill="white" stroke="black"/>
+					<polygon id="tri_simsonline" fill="white" stroke="black"/>
+	   <text id="letterA_simsonline">A</text>
+		<text id="letterB_simsonline">B</text>
+		<text id="letterC_simsonline">C</text>
+		 <line id="line0_simsonline"  stroke="turquoise" />
+		<line id="line1_simsonline"  stroke="blue" />
+		<line id="line2_simsonline"  stroke="#6495ED" />
+		<line id="line3_simsonline"  stroke="red" />
+		<line id="line4_simsonline"  stroke="red" />
+				</svg>
+			</div></div>
 		</div>
 
 		<div class="pt-message">
