--- a/gdp/v2/index.html
+++ b/gdp/v2/index.html
@@ -22,7 +22,7 @@
 		<!-- /triggers -->
 		<div class="pt-triggers">
 			<button id="iterateEffects" class="pt-touch-button cssbutton">Next problem</button>
-			<!--<div id="dl-menu" class="dl-menuwrapper">
+			<div id="dl-menu" class="dl-menuwrapper">
 				<button class="dl-trigger cssbutton">Choose a problem</button>
 				<ul class="dl-menu">
 					<li>
@@ -154,7 +154,7 @@
 					</li>
 					<li data-animation="67"><a href="#">Slide</a></li>
 				</ul>
-			</div> /dl-menu-wrapper-->
+			</div> 
 		</div>
 
 
@@ -162,7 +162,6 @@
 			<div class="pt-page pt-page-1"><h1><span>University of California, Irvine</span><strong>The Geometry 
 			</strong> Discovery Project</h1>
 	
-			<h1 class="problem-name">Simson Line</h1>
 
 				<div class="app problem">
 					<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
@@ -177,12 +176,13 @@
 			<line id="line3_simsonline"  stroke="red" />
 			<line id="line4_simsonline"  stroke="red" />
 					</svg>
+					<h1 class="problem-name">Simson Line</h1>
+
 				</div>
-				
+
 			</div>
 			<div class="pt-page pt-page-2"><h1><span>University of California, Irvine</span><strong>The Geometry 
 			</strong> Discovery Project</h1>
-			<h1 class="problem-name">Isotomic Conjugate</h1>
 
 				<div class="app problem">
 					<svg id="tri-app_isotomic" width="500" height="500" style="border: 2px solid black">
@@ -212,11 +212,13 @@
 		-1px  1px 0 #FFFFFF,
 		-1px  0   0 #FFFFFF;">P</text>
 					</svg>
+					<h1 class="problem-name">Isotomic Conjugate</h1>
+
 				</div>
 			
 			</div>
 			<div class="pt-page pt-page-3"><h1><span>University of California, Irvine</span><strong>The Geometry 
-			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line2</h1>
+			</strong> Discovery Project</h1>
 
 			<div class="app problem">
 				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
@@ -231,9 +233,10 @@
 		<line id="line3_simsonline"  stroke="red" />
 		<line id="line4_simsonline"  stroke="red" />
 				</svg>
+				<h1 class="problem-name">Simson Line2</h1>
 			</div></div>
 			<div class="pt-page pt-page-4"><h1><h1><span>University of California, Irvine</span><strong>The Geometry 
-			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line3</h1>
+			</strong> Discovery Project</h1>
 
 			<div class="app problem">
 				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
@@ -248,9 +251,10 @@
 		<line id="line3_simsonline"  stroke="red" />
 		<line id="line4_simsonline"  stroke="red" />
 				</svg>
+				<h1 class="problem-name">Simson Line3</h1>
 			</div></div>
 			<div class="pt-page pt-page-5"><h1><span>University of California, Irvine</span><strong>The Geometry 
-			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line4</h1>
+			</strong> Discovery Project</h1>
 
 			<div class="app problem">
 				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
@@ -264,10 +268,10 @@
 		<line id="line2_simsonline"  stroke="#6495ED" />
 		<line id="line3_simsonline"  stroke="red" />
 		<line id="line4_simsonline"  stroke="red" />
-				</svg>
+				</svg><h1 class="problem-name">Simson Line4</h1>
 			</div></div>
 			<div class="pt-page pt-page-6"><h1><span>University of California, Irvine</span><strong>The Geometry 
-			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line5</h1>
+			</strong> Discovery Project</h1>
 
 			<div class="app problem">
 				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
@@ -281,10 +285,10 @@
 		<line id="line2_simsonline"  stroke="#6495ED" />
 		<line id="line3_simsonline"  stroke="red" />
 		<line id="line4_simsonline"  stroke="red" />
-				</svg>
+				</svg><h1 class="problem-name">Simson Line5</h1>
 			</div></div>
 			<div class="pt-page pt-page-6"><h1><span>University of California, Irvine</span><strong>The Geometry 
-			</strong> Discovery Project</h1><h1 class="problem-name">Simson Line6</h1>
+			</strong> Discovery Project</h1>
 
 			<div class="app problem">
 				<svg id="tri-app" width="500" height="500" style="border: 2px solid black" >
@@ -298,7 +302,7 @@
 		<line id="line2_simsonline"  stroke="#6495ED" />
 		<line id="line3_simsonline"  stroke="red" />
 		<line id="line4_simsonline"  stroke="red" />
-				</svg>
+				</svg><h1 class="problem-name">Simson Line6</h1>
 			</div></div>
 		</div>
 
